--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,20 +1,21 @@
 {
-    "tabWidth": 2,
-    "singleQuote": true,
-    "semi": true,
-    "bracketSameLine": true,
-    "arrowParens": "always",
-    "bracketSpacing": true,
-    "embeddedLanguageFormatting": "auto",
-    "endOfLine": "lf",
-    "htmlWhitespaceSensitivity": "css",
-    "insertPragma": false,
-    "printWidth": 80,
-    "jsxSingleQuote": false,
-    "proseWrap": "preserve",
-    "quoteProps": "as-needed",
-    "requirePragma": false,
-    "singleAttributePerLine": false,
-    "trailingComma": "es5",
-    "useTabs": false
+  "tabWidth": 2,
+  "singleQuote": true,
+  "semi": true,
+  "bracketSameLine": true,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "embeddedLanguageFormatting": "auto",
+  "endOfLine": "lf",
+  "htmlWhitespaceSensitivity": "css",
+  "insertPragma": false,
+  "printWidth": 80,
+  "jsxSingleQuote": false,
+  "proseWrap": "preserve",
+  "quoteProps": "as-needed",
+  "requirePragma": false,
+  "singleAttributePerLine": false,
+  "trailingComma": "es5",
+  "useTabs": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
