--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.23",
     "@tanstack/react-query-devtools": "^4.32.0",
     "@types/node": "20.4.2",
@@ -24,7 +25,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
