--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/redux/ReduxProvider.jsx"],
   "exclude": ["node_modules", "src/pages/api/hello.ts"]
 }
