--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,11 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/redux/ReduxProvider.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/redux/ReduxProvider.tsx"
+  ],
   "exclude": ["node_modules", "src/pages/api/hello.ts"]
 }
