--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.3",
